# mediawiki-agent

./: .gitignore  LICENSE  Pipfile  README.md  SECURITY.md  lint.sh  mypy.ini  pyproject.toml  resiliencecoffee_family.py  user-config.py
.github/: dependabot.yml
.github/prompts/: default.prompt.md
.github/workflows/: ci.yml  lint.yml  pytest.yml  test.yml  typecheck.yml
.jules/: setup  test
mediawiki_agent/: __init__.py  agent.py  tools.py
tests/: test_add_text.py  test_check_weblinks.py  test_get_page_content.py  test_integration_features.py  test_mediawiki_agent.py  test_tools.py  test_usage_scenarios.py
