[tool.poetry]
name = "mediawiki-agent"
version = "0.1.0"
description = "smolagent Tools for interacting with MediaWiki instances"
authors = ["kmarekspartz"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
smolagents = "*"
pywikibot = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
