[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mediawiki-agent"
version = "0.1.0"
description = "smolagent Tools for interacting with MediaWiki instances"
authors = [{name = "kmarekspartz"}]
requires-python = ">=3.10"
dependencies = [
    "smolagents",
    "pywikibot",
    "pywikibot-scripts"
]

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock"
]
lint = [
    "ruff"
]
typecheck = [
    "mypy"
]

[tool.ruff]
exclude = ['user-config.py']
